port(api): 客户端源集与测试落到 1.20.1 API
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>